css/scss/homepage.scss
@import "general.scss";


.nav-banner {
    background: $brown;
    padding-bottom: 180px;
    position: relative;

    nav {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;

        &.show-nav {
            position: fixed;
            height: 0;
            opacity: 0;
            z-index: 1000;
            background-color: $brown;

            .navbar-toggler {
                margin-top: 0;
            }

            .nav-brand {
                top: 10px;

                img {
                    max-width: 50px;
                }
            }
        }
    }

    .home-nav {
        justify-content: center;
        width: 100%;
        align-items: center;
        padding-top: 20px;

        .nav-item {
            border-right: 1px solid #000;
            padding: 0 20px;

            a {
                color: $nav-text;
                text-transform: uppercase;
                padding: 1px 5px;
                letter-spacing: 2px;
                font-size: 13px;
            }

            &:nth-child(5) {
                border-left: 1px solid #000;
            }

            &:nth-child(4) {
                border: none;
                padding: 0 40px;
            }

            &:last-child {
                border: none;
            }
        }

        .nav-link img {
            max-width: 120px;
        }
    }

    .banner {
        margin: 0 auto;
        padding: 300px 15px 15px;
        max-width: 850px;
        h2 {
            color: $lighter-brown;
            margin-bottom: 10px;
            font-size: 40px;
        }

        h1 {
            color: $primary-yellow;
            font-size: 50px;
        }
    }
    .navbar-toggler {
        margin-top: 25px;
        z-index: 100;
    }

    i {
        color: $lighter-brown;
        font-size: 32px;
    }

    .nav-brand {
        position: absolute;
        top: 40px;
        left: 50%;
        transform: translateX(-50%);
        display: none;
        img {
            max-width: 120px;
        }
    }
}


.mission {
    display: flex;
    justify-content: space-between;
    background-color: $dark-brown;
    padding-bottom: 150px;
    overflow-y: auto;


    .mission-content {
        width: 75%;
        background-color: $darker-pink;
        padding: 0 15px;
        margin-right: 20px;
        display: flex;
        align-items: center;
        min-width: 400px;

        .content {
            max-width: 300px;
            margin: 0 auto;
            // transform: translateX(100px);

            h3 {
                color: $white;
                margin: 0;
                font-size: 32px;
            }

            h2 {
                color: $primary-yellow;
                margin: 15px 0;
                font-size: 45px;
            }

            p {
                color: $white;
                margin-top: 70px;
                line-height: 1.5;
                font-size: 18px;
                font-weight: 300;
            }
        }
        
    }

    .mission-photo {
        flex: 1;
        img {
            width: 100%;
            min-width: 330px;
        }
    }

    &::-webkit-scrollbar {
        display: none;
    }
}

.design-studio {
    background-color: $dark-brown;
    padding: 70px;
    border-top: 1px solid $primary-yellow;
    border-bottom: 1px solid $primary-yellow;
    display: flex;
    justify-content: center;
    align-items: center;

    .design-title {
        display: flex;
        align-items: center;
        margin-right: 140px;

        h2 {
            font-size: 55px;
            margin-right: 25px;
            color: $white;
        }

        h3 {
            font-size: 45px;
            color: $primary-yellow;

        }

        
    }

    .design-content {
        max-width: 500px;

        p {
            color: $white;
            font-size: 18px;
            margin-bottom: 30px;
        }

        a {
            color: $white;
            text-transform: uppercase;
            font-size: 14px;
            letter-spacing: 2px;
            text-decoration: none;
        }
    }
}

.core-values {
    padding: 250px 0 150px;
    background: $dark-brown;

     > p {
        text-align: center;
        color: $primary-yellow;
        font-size: 20px;
        margin-bottom: 70px;
    }

    .core-cards {
        display: flex;
        justify-content: center;
        align-items: center;
        overflow-x: auto;

        .card {
            background-color: $light-brown;
            max-width: 400px;
            margin: 0 20px;
            padding: 120px 70px;
            min-width: 400px;

            h4 {
                color: $white;
                text-align: center;
                font-size: 22px;
                font-weight: 300;
            }

            h3 {
                color: $white;
                text-align: center;
                font-size: 28px;
            }

            p {
                color: $darker-pink;
                text-align: center;
                margin-top: 50px;
                margin-bottom: 0;
            }
        }

        &::-webkit-scrollbar {
            display: none;
        }
    }

    
}

.home-two-col {

    .two-col-box {
        
        &:first-child {
            background: $primary-yellow;
        }

        &:last-child {
            background: $lighter-brown;
        }
    }
}

.instagram {
    background: $light-tan;
    padding: 120px 0;

    > p {
        text-align: center;
        text-transform: uppercase;
        margin-bottom: 50px;
    }

    .gallery {
        display: flex;
        justify-content: center;
        align-items: center;
        overflow-x: auto;

        div {
            width: 150px;
            min-width: 150px;
            height: 150px;
            margin-right: 7px;

            &:first-child, &:last-child {
                background: $lighter-brown;
            }

            &:nth-child(2), &:nth-child(5){
                background: $light-brown;
            }

            &:nth-child(3) {
                background: lightgray;
            }

            &:nth-child(4) {
                background: $dark-pink;
            }

            &:last-child {
                margin-right: 0;
            }
        }

        &::-webkit-scrollbar {
            display: none;
        }
    }
}

@media screen and (max-width: 1330px) {
    .core-values {
        padding-left: 15px;
        padding-right: 15px;
        .core-cards {
            justify-content: flex-start;

            .card {

                &:first-child {
                    margin-left: 0;
                }
            }
        }
    }
}

@media screen and (max-width: 992px){
    .nav-banner {
        .nav-brand {
            display: block;
        }

        #menu {
            position: fixed;
            top:0;
            left: 0;
            width: 100%;
            height: 100vh;
            background: $brown;
        }

        .home-nav {
            align-items: flex-start;
            margin-top: 80px;
            margin-left: 27px;

            .nav-item {
                border: none !important;
                padding-left: .75rem;
                margin: 6px 0;
            }

            .nav-logo {
                display: none;
            }
        }

        .banner {
            padding: 300px 30px 15px;
        }
    }

    .design-studio {
        .design-title {
            margin-right: 10%;
        }
    }
}

@media screen and (max-width: 955px) {
    .instagram {
        padding: 70px 15px 100px;

        > p {
            margin-bottom: 70px;
        }

        .gallery {
            justify-content: flex-start;
        }
    }
}

@media screen and (max-width: 768px){
    .mission {
        .mission-content {
            margin-right: 0;

            .content {
                margin-left: 30px;
            }
        }
    }


    .design-studio {
        flex-direction: column;

        .design-title {
            margin: 0 0 60px;
        }

        .design-content {
            display: flex;
            flex-direction: column;
            a {
                align-self: center;
                margin-top: 80px;
            }
        }
    }

    .core-values {
        padding-top: 150px;
    }
}

@media screen and (max-width: 600px) {
    .nav-banner {

        .banner {
            h1 {
                font-size: 40px;
            }

        }
    }
}

@media screen and (max-width: 450px) {
    .mission {
        .mission-content {
            min-width: 325px;
            .content {
                p {
                    font-size: 15px;
                    margin-top: 50px;
                }
            }
        }
    }


    .core-values {
        .core-cards {
            .card {
                margin: 0 7px;
                padding: 90px 40px;
                min-width: 340px;
            }
        }
    }
}

